# Internet-Computer-Bitcoin-Library

./: .gitmodules  LICENSE  README.adoc
motoko/: README.adoc
motoko/src/: AddressManagement.mo  Agent.mo  AgentPrototype.mo  CanisterCommon.mo  CanisterImplementation.mo  TransactionManagement.mo  Types.mo  UpgradeManagement.mo  Utils.mo  UtxoManagement.mo
motoko/test/: AddressManagementTest.mo  CanisterMock.mo  TestCommon.mo  TransactionManagementTest.mo  UpgradeManagementTest.mo  Utils.mo  UtxoManagementTest.mo  vessel.dhall
rust/: Cargo.toml  README.adoc
rust/src/: address_management.rs  agent.rs  bip32_extended_derivation.rs  canister_common.rs  canister_implementation.rs  canister_mock.rs  ecdsa.rs  lib.rs  transaction_management.rs  types.rs  upgrade_management.rs  utxo_management.rs
