[package]
name = "ic-btc-library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.28.1"
ic-cdk = "0.5.4"
ic-cdk-macros = "0.5.4"
serde = "1.0.132"
async-trait = "0.1.53"
hmac = "0.12"
sha2 = "0.10"
k256 = { version = "0.11", default-features = false, features = ["arithmetic"] }
candid = "0.7.14"
ic-btc-types = { git = "https://github.com/dfinity/ic/" }

[dev-dependencies]
hex = "0.4.3"
tokio = { version = "1.17.0", features = ["full"] }